@startuml

skinparam classAttributeIconSize 0
skinparam style strictuml


' ============================================================
' Classes
' ============================================================

class CSimulation
class CRender
class CMap
class CLoopReader

abstract class CRobot
class CWallFollower
class CLineFollower

class CWheel
class CTrail
class CRangeSensor
class CLineSensor


' ============================================================
' Inheritance
' ============================================================

CRobot <|-- CWallFollower
CRobot <|-- CLineFollower


' ============================================================
' Simulation Ownership
' ============================================================

CSimulation "1" *-- "1" CRender
CSimulation "1" *-- "2" CMap
CSimulation "1" *-- "1" CWallFollower
CSimulation "1" *-- "1" CLineFollower


' ============================================================
' Robot Ownership
' ============================================================

CRobot "1" *-- "2" CWheel
CRobot "1" *-- "1" CTrail

CWallFollower "1" *-- "2" CRangeSensor
CLineFollower "1" *-- "2" CLineSensor


' ============================================================
' Map Ownership
' ============================================================

CMap "1" *-- "1" CLoopReader


' ============================================================
' Non-Owning Relationships
' ============================================================

CWallFollower --> CMap : wall map
CLineFollower --> CMap : line map

CRangeSensor --> CMap : ray query
CLineSensor --> CMap : line query

@enduml